ft(logout): Logout functionality - added logout endpoint - added an endpoint to check if a token is loggedout - installed and configured redis for blacking - added logout tests [Finishes #170764582]
